cli/tests/test/no_check.out

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Uncaught TypeError: Cannot read property 'fn' of undefined
Deno.test();
     ^
    at Object.test (deno:runtime/js/40_testing.js:121:14)
    at [WILDCARD]/test/no_check.ts:1:6
